kubernetes/apps/nginx-lab/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops-lab
  labels:
    purpose: devops-practice
