kubernetes/apps/nginx-lab/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-lab-nodeport
  namespace: devops-lab
  labels:
    app: nginx-lab
spec:
  type: NodePort
  selector:
    app: nginx-lab
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30080
