kubernetes/apps/nginx-lab/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-lab
  namespace: devops-lab
  labels:
    app: nginx-lab
spec:
  type: ClusterIP
  selector:
    app: nginx-lab
  ports:
    - name: http
      port: 80
      targetPort: 80
